# demiurge

./: .gitignore  CHANGELOG.md  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: why-demiurge.md
docs/adr/: 0001-apache-2.0-license.md  0002-python-uv-stack.md  0003-runtime-agnostic-adapters.md  0004-agentformat-spec-target.md  0005-reference-adapter-claude-agent-sdk.md  0006-claude-cli-adapter.md
examples/: archon-zero.need.yaml  changelog-scribe.need.yaml  media-curator.need.yaml
src/demiurge/: __init__.py  cli.py
src/demiurge/adapters/: __init__.py  base.py  claude_cli.py  claude_sdk.py
src/demiurge/adapters/templates/claude_cli/: README.md.tmpl  pyproject.toml.tmpl  server.py
src/demiurge/adapters/templates/claude_sdk/: README.md.tmpl  pyproject.toml.tmpl  server.py
src/demiurge/curate/: __init__.py  distill.py  evals.py  judge_llm.py  outcomes.py  record.py
src/demiurge/delegate/: __init__.py  client.py  ledger.py
src/demiurge/mint/: __init__.py  need.py  pipeline.py
src/demiurge/spec/: __init__.py  emit.py  model.py  validate.py
stable/archon-zero/: archon.agf.yaml  charter.md  eval-report.json  evals.yaml  record.json
stable/changelog-scribe/: archon.agf.yaml  charter.md  eval-report.json  evals.yaml  ledger.jsonl  record.json
stable/media-curator/: archon.agf.yaml  charter.md  eval-report.json  evals.yaml  record.json
tests/: conftest.py  test_adapters.py  test_claude_cli_adapter.py  test_cli.py  test_curate.py  test_delegate.py  test_judge_llm.py  test_mint.py  test_smoke.py  test_spec.py
