[project]
name = "demiurge"
version = "0.1.0"
description = "A meta-agent that mints, delegates to, and curates specialized Archon agents."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Ceryce Armstrong" }]
keywords = ["agents", "meta-agent", "a2a", "mcp", "agentformat"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "jsonschema>=4.21",
    "a2a-sdk[http-server]>=1.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
judge = ["anthropic>=0.92"]

[project.scripts]
demiurge = "demiurge.cli:main"

[project.urls]
Repository = "https://github.com/kumouri/demiurge"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
    "uvicorn>=0.30",
    "anthropic>=0.92",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demiurge"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
